--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -23,7 +23,7 @@
             android:layout_weight="1"/>
         <Button
             android:id="@+id/buttonGet"
-            android:text="Get"
+            android:text="Search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
