--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -42,7 +42,7 @@
         android:hint="Patient Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/name"
+        android:id="@+id/fname"
         android:layout_marginTop="29dp"
         android:layout_below="@+id/details"
         android:layout_alignParentLeft="true"
@@ -55,7 +55,7 @@
         android:inputType="number"
         android:ems="10"
         android:id="@+id/age"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/fname"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
