--- a/app/src/main/res/layout/content_main1.xml
+++ b/app/src/main/res/layout/content_main1.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_main1"
+    android:id="@+id/relativelayout_for_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -13,4 +13,13 @@
     tools:context="com.example.vajiraprabuddhaka.edcrs.data.ui.Main1Activity"
     tools:showIn="@layout/app_bar_main1">
 
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView3" />
 </RelativeLayout>
