--- a/app/src/main/res/menu/activity_main1_drawer.xml
+++ b/app/src/main/res/menu/activity_main1_drawer.xml
@@ -3,34 +3,17 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/addPatient"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Add Patient" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/addDisease"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Add Disease" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/logOut"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Log Out" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
