--- a/app/src/main/res/layout/fragment_add_patient.xml
+++ b/app/src/main/res/layout/fragment_add_patient.xml
@@ -72,7 +72,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="11dp"
-        android:id="@+id/addPatient" />
+        android:id="@+id/addPatient"
+        android:elevation="0dp" />
 
     <AutoCompleteTextView
         android:hint="District"
