--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -69,10 +69,11 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="phone"
+        android:inputType="number"
         android:ems="10"
         android:id="@+id/phone"
         android:hint="Mobile Phone"
+        android:maxLength="10"
         android:layout_below="@+id/email"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -80,9 +81,10 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:hint="National ID"
         android:ems="10"
+        android:maxLength="8"
         android:layout_below="@+id/officerID"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
